@@ -4,7 +4,7 @@
     <groupId>org.pdfsam</groupId>
     <artifactId>pdfsam-parent</artifactId>
     <packaging>pom</packaging>
-    <version>5.2.3-SNAPSHOT</version>
+    <version>5.2.7-SNAPSHOT</version>
     <name>PDFsam</name>
     <description>A free open source desktop application to split and merge pdf documents</description>
     <url>https://pdfsam.org</url>
@@ -17,7 +17,7 @@
         <connection>scm:git:git@github.com:torakiki/pdfsam.git</connection>
         <developerConnection>scm:git:git@github.com:torakiki/pdfsam.git</developerConnection>
         <url>scm:git:git@github.com:torakiki/pdfsam.git</url>
-        <tag>v5.1.3</tag>
+        <tag>v5.2.6</tag>
     </scm>
 
     <licenses>
@@ -118,7 +118,9 @@
                         <configuration>
                             <additionalOptions>
                                 <additionalOption>-Xdoclint:none</additionalOption>
+                                <additionalOption>--enable-preview</additionalOption>
                             </additionalOptions>
+                            <release>21</release>
                         </configuration>
                     </plugin>
                     <plugin>
@@ -149,7 +151,7 @@
                     <plugin>
                         <groupId>org.sonatype.plugins</groupId>
                         <artifactId>nexus-staging-maven-plugin</artifactId>
-                        <version>1.6.13</version>
+                        <version>1.7.0</version>
                         <extensions>true</extensions>
                         <configuration>
                             <serverId>pdfsam-ossrh</serverId>
@@ -218,7 +220,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.12.1</version>
+                    <version>3.13.0</version>
                     <configuration>
                         <release>21</release>
                         <!-- remove this once Foreign Function & Memory API is out of preview-->
@@ -228,7 +230,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>3.3.0</version>
+                    <version>3.4.2</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -238,27 +240,27 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
-                    <version>3.6.0</version>
+                    <version>3.7.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-assembly-plugin</artifactId>
-                    <version>3.6.0</version>
+                    <version>3.7.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-clean-plugin</artifactId>
-                    <version>3.3.2</version>
+                    <version>3.4.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
-                    <version>3.1.1</version>
+                    <version>3.4.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-source-plugin</artifactId>
-                    <version>3.3.0</version>
+                    <version>3.3.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -268,17 +270,17 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>build-helper-maven-plugin</artifactId>
-                    <version>3.5.0</version>
+                    <version>3.6.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-toolchains-plugin</artifactId>
-                    <version>3.1.0</version>
+                    <version>3.2.0</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.2.5</version>
+                    <version>3.3.1</version>
                     <configuration>
                         <useModulePath>false</useModulePath>
                         <!-- remove this once Foreign Function & Memory API is out of preview-->
@@ -288,45 +290,44 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
-                    <version>3.0.1</version>
+                    <version>3.1.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-gpg-plugin</artifactId>
-                    <version>3.1.0</version>
+                    <version>3.2.5</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.6.3</version>
+                    <version>3.10.0</version>
                 </plugin>
             </plugins>
         </pluginManagement>
     </build>
 
     <properties>
-        <junit.version>5.10.2</junit.version>
+        <junit.version>5.11.0</junit.version>
         <junit.pioneer.version>2.2.0</junit.pioneer.version>
-        <archunit.version>1.2.1</archunit.version>
-        <slf4j.version>2.0.11</slf4j.version>
-        <commons.lang.version>3.14.0</commons.lang.version>
-        <commons.io.version>2.15.1</commons.io.version>
-        <mockito.version>5.10.0</mockito.version>
+        <archunit.version>1.3.0</archunit.version>
+        <slf4j.version>2.0.16</slf4j.version>
+        <commons.lang.version>3.16.0</commons.lang.version>
+        <commons.io.version>2.16.1</commons.io.version>
+        <mockito.version>5.12.0</mockito.version>
         <tinylog.version>2.7.0</tinylog.version>
         <hibernate-validator.version>7.0.5.Final</hibernate-validator.version>
-        <sejda.version>5.0.13</sejda.version>
-        <sejda-io.version>4.0.0.M3</sejda-io.version>
+        <sejda.version>5.1.1</sejda.version>
+        <sejda-io.version>4.0.0.M4</sejda-io.version>
         <sejda.commons.version>3.0.0</sejda.commons.version>
-        <eventstudio.version>4.0.0</eventstudio.version>
+        <eventstudio.version>4.0.1</eventstudio.version>
         <injector.version>5.0.0</injector.version>
-        <rxjava.version>3.1.8</rxjava.version>
         <ikonli.version>12.3.1</ikonli.version>
-        <testfx.version>4.0.17</testfx.version>
-        <jackson.version>2.16.1</jackson.version>
-        <bouncycastle.version>1.77</bouncycastle.version>
-        <assertj.version>3.25.3</assertj.version>
+        <testfx.version>4.0.18</testfx.version>
+        <jackson.version>2.17.2</jackson.version>
+        <bouncycastle.version>1.78.1</bouncycastle.version>
+        <assertj.version>3.26.3</assertj.version>
         <hamcrest.version>2.2</hamcrest.version>
-        <javafx.version>21.0.2</javafx.version>
+        <javafx.version>21.0.4</javafx.version>
         <jakarta-el.version>4.0.2</jakarta-el.version>
         <jakarta.inject.version>2.0.1</jakarta.inject.version>
         <validation.api.version>3.0.2</validation.api.version>
@@ -443,11 +444,6 @@
                 <groupId>jakarta.inject</groupId>
                 <artifactId>jakarta.inject-api</artifactId>
                 <version>${jakarta.inject.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.reactivex.rxjava3</groupId>
-                <artifactId>rxjava</artifactId>
-                <version>${rxjava.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.tinylog</groupId>
